<resources>
    <string name="app_name">Currency Exchange</string>
    <string name="title_exchange">Exchange</string>
    <string name="title_rate">Rate</string>
    <string name="title_transaction">Transactions</string>
    <string name="my_balances">My Balances</string>
    <string name="currency_exchange">Currency Exchange</string>
    <string name="sell">Sell</string>
    <string name="buy">Buy</string>
    <string name="hint_price">000.00</string>
    <string name="submit">Submit</string>
    <string name="sell_amount_is_less_than_zero">Sell amount is less than zero</string>
    <string name="empty_sell_amount">Enter sell amount!</string>
    <string name="empty_buy_amount">Invalid buy amount!</string>
    <string name="transfer_operation">Transfer Operation</string>
    <string name="current_balance">Current Balance</string>
    <string name="commission_fee">Commission Fee</string>
    <string name="transaction">Transaction</string>
    <string name="nothing">Nothing!!</string>
    <string name="your_transaction_list_is_empty">Your Transaction list is empty</string>
    <string name="updating">Updating…</string>
    <string name="transaction_message">You have converted %s %s to %s %s. Commission Fee - %s %s.</string>
    <string name="ok_string">OK</string>
</resources>