<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_exchange">

    <fragment
        android:id="@+id/navigation_exchange"
        android:name="com.mkdev.currencyexchange.ui.exchange.ExchangeFragment"
        android:label="@string/title_exchange"
        tools:layout="@layout/fragment_exchange" />

    <fragment
        android:id="@+id/navigation_rate"
        android:name="com.mkdev.currencyexchange.ui.rate.RateFragment"
        android:label="@string/title_rate"
        tools:layout="@layout/fragment_rate" />
    <fragment
        android:id="@+id/navigation_transaction"
        android:name="com.mkdev.currencyexchange.ui.transaction.TransactionFragment"
        android:label="@string/transaction"
        tools:layout="@layout/fragment_transaction" />

</navigation>